# django-boilerplate

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  entrypoint  gunicorn.py  requirements.txt  start
app/core/: celery.py  settings.py  urls.py  views.py
nginx/configuration/development/: nginx.conf
nginx/configuration/production/: nginx.conf
