[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["Javokhir Artykov <javokhior@gmail.com>"]
readme = "README.md"
packages = [{include = "django-boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-jazzmin = "^2.6.0"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
celery = "^5.3.1"
django-debug-toolbar = "^4.2.0"
django-redis = "^5.3.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
gevent = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
